# spectrum

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY.md
.agents/skills/uav/: SKILL.md
.github/workflows/: ci.yml
apps/lumen/: Cargo.toml
apps/lumen/src/: command.rs  command_tests.rs  engine.rs  lib.rs  preview.rs  preview_tests.rs  revisions.rs
apps/lumen/src/revisions/: codec.rs
apps/lumen/tests/: cli_agent.rs  macos_icon_catalog.rs  source_layout.rs
apps/mica/: Cargo.toml
apps/mica/src/: lib.rs
apps/prism/: Cargo.toml
apps/prism/native/ghostty-proof/: Info.plist  Package.swift  README.md
apps/prism/native/ghostty-proof/Sources/PrismGhosttyProof/: GhosttyProofBridge.swift  GhosttyProofRuntime.swift  GhosttyProofSurfaceView.swift  main.swift
apps/prism/native/ghostty-proof/include/: prism_ghostty_bridge.h
apps/prism/native/ghostty-terminal/: Package.swift  README.md
apps/prism/native/ghostty-terminal/Sources/PrismGhosttyBridge/: PrismGhosttyBridge.swift  PrismGhosttyRuntime.swift  PrismGhosttySurfaceView.swift
apps/prism/native/ghostty-terminal/include/: prism_ghostty_bridge.h
apps/prism/src/: alignment.rs  alignment_tests.rs  blend.rs  bundled_font.rs  command_apply.rs  commands.rs  core_tests.rs  direct_preview.rs  document_lifecycle_tests.rs  durable_asset_tests.rs  durable_cache.rs  durable_edit.rs  effect_tests.rs  effects.rs  effects_render.rs  font_source.rs  font_subset_plan.rs  font_usage.rs  lasso.rs  lib.rs  optimized_copy.rs  optimized_copy_tests.rs  optimized_copy_validation.rs  paint.rs  paint_limits_tests.rs  paint_selection.rs  paint_tests.rs  path_tests.rs  paths.rs  pixel_mask_tests.rs  pixel_masks.rs  raster_backing_cache.rs  raster_backing_cache_tests.rs  raster_backing_eviction_tests.rs  raster_region.rs  raster_source_resolver_tests.rs  raster_sources.rs  readonly_font.rs  render.rs  render_fallback.rs  (+26 more)
apps/prism/src/raster_backing_cache/: cache_fs.rs  maintenance.rs  prepare.rs
apps/prism/src/render/: stats.rs  tiles.rs
apps/prism/src/render_region/: shadow_tile.rs  source.rs
apps/prism/src/text_render/: font_cache.rs  font_loader.rs
apps/prism/tests/: blend_parity.rs  cli_agent.rs  dissolve.rs  source_layout.rs
apps/prism/tests/fixtures/: blend-parity.json  dissolve-parity.json
assets/branding/: README.md
assets/branding/Lumen.icon/: icon.json
assets/branding/Prism.icon/: icon.json
crates/spectrum-fonts/: Cargo.toml  ENGINE.md
crates/spectrum-fonts/examples/: generate_fixtures.rs
crates/spectrum-fonts/src/: cmap.rs  conformance.rs  error.rs  glyf.rs  lib.rs  limits.rs  sfnt.rs  shaping.rs
crates/spectrum-fonts/tests/: conformance.rs  support.rs
crates/spectrum-history-ui/: Cargo.toml
crates/spectrum-history-ui/src/: lib.rs
crates/spectrum-imaging/: Cargo.toml
crates/spectrum-imaging/src/: adjustments.rs  lib.rs  region_source.rs  render.rs
crates/spectrum-revisions/: Cargo.toml
crates/spectrum-revisions/src/: collaboration.rs  error.rs  id.rs  identity.rs  lib.rs  live.rs  metadata.rs  model.rs  publish.rs  schema.rs  storage_io.rs  store.rs  store_payloads.rs  store_tracks.rs
crates/spectrum-revisions/src/live/: capabilities.rs  fault.rs  linux_io.rs  metrics.rs  mutation_tests.rs  no_replace.rs  recovery.rs  recovery_tests.rs  security_tests.rs  tail_tests.rs  tests.rs
crates/spectrum-revisions/src/live/linux_io/: inode_exchange.rs  markers.rs  mutation.rs  publication.rs
crates/spectrum-revisions/src/store/: durability.rs  rows.rs
crates/spectrum-revisions/tests/: live.rs  store.rs
crates/spectrum-terminal/: Cargo.toml
crates/spectrum-terminal/native/ghostty-bridge/: Package.swift  README.md
crates/spectrum-terminal/native/ghostty-bridge/Sources/SpectrumGhosttyBridge/: SpectrumGhosttyBridge.swift  SpectrumGhosttyFocusHandoff.swift  SpectrumGhosttyRuntime.swift  SpectrumGhosttySurfaceView.swift
crates/spectrum-terminal/native/ghostty-bridge/Tests/SpectrumGhosttyBridgeTests/: SpectrumGhosttyFocusHandoffTests.swift
crates/spectrum-terminal/native/ghostty-bridge/include/: spectrum_ghostty_bridge.h
crates/spectrum-terminal/native/ghostty-proof/: Info.plist  Package.swift  README.md
crates/spectrum-terminal/native/ghostty-proof/Sources/SpectrumGhosttyProof/: GhosttyProofBridge.swift  GhosttyProofRuntime.swift  GhosttyProofSurfaceView.swift  main.swift
crates/spectrum-terminal/native/ghostty-proof/include/: spectrum_ghostty_bridge.h
crates/spectrum-terminal/src/: lib.rs  native_ghostty.rs  native_ghostty_macos_tests.rs
docs/: ARCHITECTURE.md  CLI.md  MICA.md  PRISM.md  SUITE.md
packaging/lumen/linux/: com.bentsignal.Lumen.desktop
packaging/macos/: Info.plist
packaging/mica/linux/: com.bentsignal.Mica.desktop
packaging/mica/macos/: Info.plist
packaging/mica/windows/: mica.manifest
packaging/prism/linux/: com.bentsignal.Prism.desktop
packaging/prism/macos/: Info.plist
packaging/prism/windows/: prism.manifest
scripts/: build-prism-ghostty-bridge-macos.sh  build-prism-ghostty-macos.sh  build-spectrum-ghostty-bridge-macos.sh  build-spectrum-ghostty-macos.sh  hash-prism-ghostty-tree.py  hash-prism-sdk-tree.py  hash-spectrum-sdk-tree.py  package-linux.sh  package-macos-icon.sh  package-macos.sh  package-mica-linux.sh  package-mica-macos.sh  package-mica-windows.ps1  package-prism-linux.sh  package-prism-macos.sh  package-prism-windows.ps1  package-windows.ps1  prism-ghostty-xcrun-shim.sh  render-squircle-app-icon.swift  run-spectrum-bounded.py  scrub-prism-binary-paths.py  scrub-spectrum-binary-paths.py  spectrum-ghostty-xcrun-shim.sh  test-prism-ghostty-packaging-source.sh  test-spectrum-ghostty-packaging-source.sh  validate-prism-ghostty-metadata.py  validate-spectrum-ghostty-metadata.py  verify-prism-ghostty-bridge-macos.sh  verify-prism-ghostty-sdk.py  verify-prism-ghostty-xcframework.py  verify-spectrum-ghostty-bridge-macos.sh  verify-spectrum-ghostty-sdk.py
src/: adjustments.rs  command.rs  engine.rs  lib.rs  project.rs
tools/workspace-guardrails/: Cargo.toml
tools/workspace-guardrails/src/: lib.rs
(+4 files in other folders)
