[package]
name = "lumen-photo"
version = "0.5.0"
edition = "2024"
description = "A lean, cross-platform, CLI-first photo editor written in Rust"
license = "MIT"
repository = "https://github.com/bentsignal/lumen-photo"

[workspace]
members = ["apps/mica"]
resolver = "2"

[lib]
name = "lumen_core"

[[bin]]
name = "lumen"
path = "src/bin/lumen.rs"

[[bin]]
name = "lumen-gui"
path = "src/bin/lumen-gui.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6", features = ["derive"] }
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "glow", "persistence", "wayland", "x11"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff", "webp"] }
rawler = "0.7.2"
rayon = "1.12"
rfd = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
