[workspace]
members = [
    "apps/lumen",
    "apps/prism",
    "crates/spectrum-imaging",
    "tools/workspace-guardrails",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/bentsignal/spectrum"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6", features = ["derive"] }
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "glow", "persistence", "wayland", "x11"] }
epaint_default_fonts = "0.35"
fontdue = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff", "webp"] }
rawler = "0.7.2"
rayon = "1.12"
rfd = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
