[workspace]
members = [
    "apps/lumen",
    "apps/prism",
    "crates/spectrum-imaging",
    "crates/spectrum-history-ui",
    "crates/spectrum-fonts",
    "crates/spectrum-terminal",
    "crates/spectrum-revisions",
    "tools/workspace-guardrails",
]
exclude = ["third_party/hb-subset"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/bentsignal/spectrum"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.6", features = ["derive"] }
eframe = { version = "0.35", default-features = false, features = ["default_fonts", "glow", "persistence", "wayland", "x11"] }
egui = "0.35"
epaint_default_fonts = "0.35"
flate2 = "1.1"
fs2 = "0.4"
fontdue = "0.9"
hb-subset = { version = "=0.3.0", path = "third_party/hb-subset", features = ["bundled"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff", "webp"] }
libc = "0.2"
png = "0.18.1"
portable-pty = "0.9"
rawler = "0.7.2"
rayon = "1.12"
rfd = "0.17"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
ttf-parser = "0.21.1"
uuid = { version = "1.24", features = ["serde", "v4"] }
url = "2.5"
vt100 = "0.16"
winit = "0.30.13"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
