[package]
name = "prism"
version = "0.1.0"
edition.workspace = true
description = "A fast, agent-first layered image editor"
license.workspace = true
repository.workspace = true

[lib]
name = "prism_core"

[[bin]]
name = "prism"
path = "src/bin/prism.rs"

[[bin]]
name = "prism-gui"
path = "src/bin/prism-gui.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
eframe.workspace = true
epaint_default_fonts.workspace = true
flate2.workspace = true
fontdue.workspace = true
fs2.workspace = true
image.workspace = true
png.workspace = true
lumen-photo = { path = "../lumen" }
rfd.workspace = true
serde.workspace = true
serde_json.workspace = true
spectrum-imaging = { path = "../../crates/spectrum-imaging" }
spectrum-history-ui = { path = "../../crates/spectrum-history-ui" }
spectrum-revisions = { path = "../../crates/spectrum-revisions" }
spectrum-terminal = { path = "../../crates/spectrum-terminal" }
sha2.workspace = true
ttf-parser.workspace = true
vt100.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSApplication", "NSEvent", "NSMenu", "NSMenuItem", "NSResponder"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSArray", "NSObject", "NSString", "NSURL"] }
winit.workspace = true

[dev-dependencies]
rusqlite.workspace = true
