[package]
name = "spectrum-revisions"
version = "0.1.0"
edition.workspace = true
description = "App-neutral durable revision storage for Spectrum creative tools"
license.workspace = true
repository.workspace = true

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true
fs2.workspace = true
url.workspace = true
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3.23"

[[bin]]
name = "revision-benchmark"
path = "src/bin/revision-benchmark.rs"
